ui: Fix alignment of header bar buttons on left
We set the bottom padding to zero so the separator extends to the
bottom of the header bar; however with a non-zero top padding, the
buttons end up off-center. Just set both top and bottom padding to
zero and rely on the alignment for the buttons.

https://bugzilla.gnome.org/show_bug.cgi?id=710461

--- a/data/resources/application.css
+++ b/data/resources/application.css
@@ -104,9 +104,9 @@
 .polari-titlebar-left {
     /* the horizontal padding confuses left_side_size_group, so we
        add it as margin-left to the first button instead (in mainWindow.ui);
-       also set the bottom padding to 0 so the separator extends to the
+       also set the vertical padding to 0 so the separator extends to the
        bottom */
-    padding: 6px 1px 0;
+    padding: 0 1px;
 }
 
 .polari-titlebar-left:dir(ltr),
